public interface Display {
    public void update(Data data);
}
